# hoopvision

./: .gitignore  README.md  pyproject.toml
engine/: classifier.py  cli.py  compiler.py  decoder.py  detector.py  exporter.py  narrator.py  ocr.py  pipeline.py  pose.py  schema.py
hoopvision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
macos/: Package.swift  build.sh
macos/HoopVision.app/Contents/: Info.plist
macos/HoopVision.app/Contents/MacOS/: HoopVision
macos/Sources/: AppState.swift  ContentView.swift  HoopVisionApp.swift  PythonBridge.swift
macos/Sources/Views/: ConfigView.swift  ImportView.swift  ProgressView.swift  TimelineView.swift  WelcomeView.swift
shared/templates/: timeline.html
tests/: test_classifier.py  test_cli.py  test_compiler.py  test_decoder.py  test_detector.py  test_exporter.py  test_integration.py  test_narrator.py  test_ocr.py  test_pipeline.py  test_schema.py
