[project]
name = "hoopvision"
version = "0.1.0"
description = "Basketball game AI analyzer"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "paddleocr>=2.7",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine", "engine.*", "shared", "shared.*", "tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
